2001-04-13  Adam Fedor  <fedor@gnu.org>

	* GUI Backend built as bundle by default. Remove backend component
	of LIBRARY_COMBO throughout makefiles and scripts.
	* configure.in: Add enable-backend-bundle.
	* config.make.in: Define BACKEND_BUNDLE.

	* Documenation/DESIGN,gnustep-howto.texi,install.texi: Update.

	* openapp.in: Simplify - use executable.template script for work.
	* opentool.in: Likewise.
	(patches from Jeff Teunissen <deek@dusknet.dhs.org>).
	
Wed Apr 11 12:03:55 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* documentation.make [TEXI_FILES] ($(INTERNAL_doc_NAME)_toc.html):
	Do not abort if command fails (presumably because texi2html could
	not be found).  (internal-doc-install): Install html only if it
	has been generated.
	
2001-04-09  Adam Fedor  <fedor@gnu.org>

	* Merge 1.0 branch back into main.

2001-03-23  Jonathan Gapen  <jagapen@home.com>

	* configure.in: Also look for 'gnutar' tar program.
	* configure: Re-generate.

2001-04-05  Adam Fedor  <fedor@gnu.org>

	* Version: 1.0.0
	* GNUstep-HOWTO, NEWS: Regenerated.
	* Documentation/machines.texi: Update

2001-04-04  Adam Fedor  <fedor@gnu.org>

	* config.guess: Update to latest version
	* config.sub: Likewise.
	* configure.in: Quote $host_os
	* Documentation/*texi: Update

2001-03-31  Adam Fedor  <fedor@gnu.org>

	* target.make (TARGET_SYSTEM_LIBS): Set default libs.

2001-03-30  Adam Fedor  <fedor@gnu.org>

	* target.make: Define TARGET_SYSTEM_LIBS for cygwin.

2001-03-29  Adam Fedor  <fedor@gnu.org>

	* Documentation/GNUmakefile.in: Use standard rules for documentation.
	* Documentation/*texi: Update
	* GNUstep-HOWTO, INSTALL, README: Regen.

2001-03-28  Adam Fedor  <fedor@gnu.org>

	* configure.in: Remove spurious ','.

	* which_lib.c (search_for_library_in_directory): Translate Windows
	//c paths to c: so MingW functions can find them.

2001-03-27  Adam Fedor  <fedor@gnu.org>

	* target.make: Add darwin target.

	* Documentation/machines.texi: Update.
	* Documentation/faq.texi: Likewise.